Abort session after a new proxy resolver is set

It's currently don only when proxy-uri property is set, but it should
always be done after a new proxy resolver is set.

https://bugzilla.gnome.org/show_bug.cgi?id=777326